tests/errors/semantic/non_blocking/INCOMPATIBLE_TYPES_IN_ASSIGNMENT_3.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = 4
a += 5.0
